--- a/src/activity1/MusicAPI/package.json
+++ b/src/activity1/MusicAPI/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "your-package-name",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.ts",
+  "scripts": {
+    "start:watch": "nodemon ./src/app.ts",
+    "start": "npx ts-node ./src/app.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "express": "^4.18.2"
   },
