--- a/src/activity1/MusicAPI/package.json
+++ b/src/activity1/MusicAPI/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
